--- a/runelite/runelite-client/src/main/resources/open.osrs.properties
+++ b/runelite/runelite-client/src/main/resources/open.osrs.properties
@@ -5,7 +5,7 @@ runelite.discord.invite=https://discord.gg/uytRcc8
 runelite.github.link=https://github.com/open-osrs/runelite
 runelite.wiki.link=https://github.com/open-osrs/runelite/wiki
 runelite.patreon.link=https://kronos.rip/store
-open.osrs.title=Kronos
+open.osrs.title=Deadman Mode
 open.osrs.version=@open.osrs.version@
 open.osrs.builddate=@open.osrs.builddate@
 runelite.wiki.troubleshooting.link=https://github.com/open-osrs/runelite/wiki/Troubleshooting-problems-with-the-client
